Version 0.7.3 (??? 2010)
---------------------------

* ``macro_func`` can now return a dictionary, providing better support
  for typical bodied macro use (i.e., styling and formatting)
* added ``custom_markup``, ``disable_external_content``, and ``simple_markup``,
  parameters to ``create_dialect`` function
* added support for custom base urls and functions for images


Version 0.7.2 (May 8 2010)
-----------------------------

* fixed bad import in setup.py 
* images now support wiki links and interwiki links


Version 0.7.1 (March 29 2010)
-----------------------------

* added ``indent_class`` and ``indent_style`` parameter to
  ``create_dialect`` function

Version 0.7.0 (March 20 2010)
-----------------------------

* added syntax for indented regions
* added Parser.parse() method to expose the parse tree (a Genshi Fragment object)
* improved output of passed through macros to better support post-processing
* removed depreciated Creole10 class support


Version 0.6.1 (March 31 2009)
-----------------------------

* fixed recursion issue with long lists and tables (>400 rows)
* added ``parse_args`` function for macro arg_string parsing


Version 0.6 (March 1 2009)
--------------------------

* refactored dialects.py to make extending easier

  * added ``creole10_base`` class factory function
  * added ``creole11_base`` class factory function
  * added ``create_dialect`` factory function
  * The old ``Creole10`` class is now a factory function and
    it is depreciated. 

* ``macro_func`` now takes a fifth positional argument, ``environ`` 
* creole2html and text2html convenience functions now return html, not xhtml

  * ``no_wiki_monospace`` is now True for text2html

* creole_to_xmtml convenience function removed
* explicit url links (e.g., [[http://example.com/]]) can be multiline
* added support for easy inline markup customization (SimpleElement)
* changed <tt> to <code>
* added support for blog-style line endings (blog_style_endings=True)